src/App.css
* {
  box-sizing: border-box;
  padding: 0px;
  margin: 0px;
  overflow-wrap: break-word;
}

html,
body {
  height: 100%;
  background-image: url(./elden-ring-logo.jpg);
  background-position: center;
  background-size: cover;
}

.container-all {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  min-height: 100vh;
}

.cards-container {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  cursor: crosshair;
  grid-gap: 1rem;
}

.card-image {
  width: 250px;
  height: 200px;
  object-fit: cover;
}

.card-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: rgba(150, 130, 130, 0.5);
  border-radius: 10px;
  width: 280px;
  padding: 10px;
}

.card-container:hover {
  animation: scale 0.2s linear;
  animation-fill-mode: forwards;
}

@keyframes scale {
  0% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
  100% {
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
    box-shadow: 0px 0px 10px 10px rgba(219, 210, 210, 0.3);
  }
}

.card-container > span {
  margin-top: 10px;
  color: beige;
}

.loading {
  color: wheat;
}

.score-container {
  display: flex;
  flex-direction: row;
  color: rgb(70, 53, 37);
  margin-top: 2rem;
  margin-bottom: 3rem;
  padding: 5px;
  background-color: rgba(230, 230, 230, 0.5);
  border-radius: 10px;
}

.game-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#score {
  margin-right: 20px;
}

.footer {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 70%;
  margin-top: 2rem;
  margin-bottom: 2rem;
  color: beige;
}

.footer > p > a {
  position: relative;
  color: beige;
  text-decoration: none;
  letter-spacing: 0.5px;
  padding: 0px 10px;
}

.footer > p > a::after {
  content: "";
  position: absolute;
  background-color: rgb(255, 215, 0);
  height: 2px;
  width: 0;
  left: 0;
  bottom: -5px;
  transition: 0.3s;
}

.footer > p > a:hover {
  color: rgb(217, 247, 109);
}

.footer > p > a:hover:after {
  width: 100%;
}

